Simplified command execution logic for CodeQL testing demonstration.